--- a/src/main/elo-frontend/src/Components/table.css
+++ b/src/main/elo-frontend/src/Components/table.css
@@ -9,9 +9,9 @@ table {
     padding: 8px;
   }
   
-  table tr:nth-child(even){background-color: #f2f2f2;}
+  /* table tr:nth-child(even){background-color: #f2f2f2;} */
   
-  table tr:hover {background-color: #ddd;}
+  /* table tr:hover {background-color: #ddd;} */
   
   table th {
     padding-top: 12px;
