--- a/src/main/elo-frontend/src/App.css
+++ b/src/main/elo-frontend/src/App.css
@@ -1,5 +1,73 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
 .App {
   text-align: center;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.Navbar {
+  /* background-color: #021e39; */
+  width: 100%;
+  height: 80px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+}
+
+.Navbar .leftSide{
+  flex: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Navbar .leftSide .links{
+  max-height: 80px;
+}
+
+.Navbar .leftSide .links a{
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+  margin-left: 15px;
+}
+
+.Navbar .rightSide{
+  flex: 50%;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.headerlink-title {
+  color: black;
+  text-decoration: none;
+  padding: 0 5px;
+}
+
+.headerlink-dot {
+  margin-top: -0.5rem;
+  opacity: 0;
+  transition: opacity 200ms linear;
+}
+
+.headerlink-title:hover .headerlink-dot {
+  opacity: 1;
+}
+
+.headerlink-dot-active {
+  margin-top: -0.5rem;
+  display: block;
 }
 
 .App-logo {
