--- a/src/main/elo-frontend/src/Components/Header.css
+++ b/src/main/elo-frontend/src/Components/Header.css
@@ -1,12 +1,13 @@
 .header {
     display: flex;
     justify-content: center;
+    margin-top: 1rem;
   }
   
   .headerlink-title {
     color: black;
     text-decoration: none;
-    padding: 0 5px;
+    padding: 0 10px;
   }
   
   .headerlink-dot {
