--- a/src/main/elo-frontend/src/Components/table.css
+++ b/src/main/elo-frontend/src/Components/table.css
@@ -1,12 +1,17 @@
 table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 60%;
+    margin-left: 20%;
+    margin-bottom: 10px;
+    border: "none";
+    background: 'transparent';
   }
   
   table td, table th {
-    border: 1px solid #ddd;
-    padding: 8px;
+    width: 30%;
+    border-bottom: 0.5px solid rgb(226, 226, 226);
+    padding: 5px;
   }
   
   /* table tr:nth-child(even){background-color: #f2f2f2;} */
@@ -20,3 +25,4 @@ table {
     background-color: #ffffff;
     color: rgb(5, 5, 5);
   }
+
