--- a/src/main/elo-frontend/src/App.css
+++ b/src/main/elo-frontend/src/App.css
@@ -62,7 +62,7 @@ label {
   color: #000000;
   cursor: initial;
   display: inline-block;
-  font-family: Clarkson,Helvetica,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0;
@@ -113,7 +113,7 @@ label {
   color: #000000;
   cursor: pointer;
   display: inline-block;
-  font-family: Clarkson,Helvetica,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0;
