--- a/src/main/elo-frontend/src/Components/listTable.css
+++ b/src/main/elo-frontend/src/Components/listTable.css
@@ -1,9 +1,6 @@
 table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 60%;
-    margin-left: 20%;
-    margin-bottom: 10px;
     border: "none";
     background: 'transparent';
   }
@@ -14,14 +11,6 @@ table {
     padding: 5px;
   }
   
-  /* table tr:nth-child(even){background-color: #f2f2f2;} */
-  
-  table tr:hover {background-color: rgb(241, 241, 241);}
-
-  .row-selected {
-    background-color: rgb(241, 241, 241);
-  }
-  
   table th {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -29,8 +18,11 @@ table {
     background-color: #ffffff;
     color: rgb(5, 5, 5);
   }
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+    flex-direction: row;
+}
 
-  .loading{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-  }
