--- a/src/main/elo-frontend/src/Components/table.css
+++ b/src/main/elo-frontend/src/Components/table.css
@@ -14,8 +14,6 @@ table {
     padding: 5px;
   }
   
-  /* table tr:nth-child(even){background-color: #f2f2f2;} */
-  
   table tr:hover {background-color: rgb(241, 241, 241);}
 
   .row-selected {
@@ -33,4 +31,15 @@ table {
   .loading{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+  }
+
+  .container{
+    padding-top:3%;
+    padding-bottom: 3%;
+    border-bottom: 1.5px solid  rgb(107, 107, 107);
+  }
+
+  .container-special{
+    padding-top:3%;
+    padding-bottom: 3%;
   }
